Fixed some buttons on dark mode

--- a/global-dark.css
+++ b/global-dark.css
@@ -179,6 +179,7 @@ input[type=submit]#cartCheckout:hover {
 .cart-summary li button, .save-button {
     border: 0;
     width: 10vh;
+    height: 5vh;
     font-size: 15px;
     background-color: #AC3B61; /* Highlight color */
     transition: 250ms;
